src/test/compile-fail/ext-nonexistent.rs
// error-pattern:unknown syntax expander
fn main() {
  #iamnotanextensionthatexists("");
}
